# platform.core.telephony.tel-plugin-vmodem

./: AUTHORS  CMakeLists.txt  README  tel-plugin-vmodem.manifest
debian/: changelog  control  rules
include/: config.h  vdpram.h  vdpram_dump.h
include/legacy/: TelUtility.h
packaging/: tel-plugin-vmodem.spec
src/: config.c  desc-vmodem.c  vdpram.c  vdpram_dump.c
